[package]
name = "sauce_discordbot"
version = "0.1.0"
authors = ["l1npengtul <l1npengtul@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.8.6"
reqwest = "0.10.6"
tokio = { version = "0.2", features = ["full"] }
regex = "1.3.9"
futures = "0.3"
